# fast-r-emb

./: .dockerignore  .gitignore  Dockerfile  README.md  analysis.py  generate_testset_info.py  pyproject.toml  show_test_examples.py
data/grep_v3/: grep-bbox.txt
data/results-2026-01-23-115413/: run-metadata.json
data/results-2026-01-23-204650/: results.csv  run-metadata.json
notebooks/: results.ipynb  results.rmd  results_running_time.ipynb  results_test.ipynb
outputs/: appendix_chart_v1_example.tex  c_tests_grep_v3_listing.tex  pvalues_rejection_matrix.tex
presentation_examples/: fast-cs.py  fast-pp.py  logit.py  logit_2.py  performance-curve.py  term-frequency-emb.py  term-frequency.py
scripts/: analysis.py  testset_info.tex
src/: budget.py  fastr.py  hashing.py  metric.py  running_time.py  utils.py
src/embedding/: codeT5.py
